[gd_scene load_steps=5 format=3 uid="uid://cxx8xgpf1g076"]

[ext_resource type="Script" path="res://scripts/Gods/usableGod.gd" id="1_6fu4h"]
[ext_resource type="PackedScene" uid="uid://dh0d00qslh10a" path="res://scenes/god.tscn" id="2_kvmr5"]
[ext_resource type="Texture2D" uid="uid://bqtpyf42sdj5w" path="res://assets/gods/Ganesh.png" id="3_1hqm4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6km2e"]
size = Vector2(56, 62)

[node name="elephantGod" type="CharacterBody2D"]
collision_layer = 32
collision_mask = 49
script = ExtResource("1_6fu4h")
speed = 25

[node name="god" parent="." instance=ExtResource("2_kvmr5")]
godImage = ExtResource("3_1hqm4")
timeMov = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 0)
shape = SubResource("RectangleShape2D_6km2e")

[connection signal="card_entered" from="god" to="." method="_on_god_card_entered"]
[connection signal="change_direction" from="god" to="." method="_on_god_change_direction"]
